[package]
name = "libxml2"
version = "0.1.0"
edition = "2021"

[features]
default = ["std"]
std = []

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
debug = true

[build-dependencies]
cc = { version = "1.0", features = ["parallel"] }
which = { version = "4.0.2" }

[dependencies]
libafl = { path = "../../libafl/", features = ["default"] }
libafl_targets = { path = "../../libafl_targets/", features = ["sancov_pcguard_hitcounts", "libfuzzer", "sancov_cmplog"] }
libafl_cc = { path = "../../libafl_cc/" }
mimalloc = { version = "*", default-features = false }
clap = { version = "4.0", features = ["derive"] }

[lib]
name = "libfuzzer_libxml2"
crate-type = ["staticlib"]